# open-heart

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.ps1  build.sh  run.ps1  watch.ps1
docs/: ARCHITECTURE.md  BUILDING.md  DATA_FORMATS.md  DESIGN_PLAN.md  EDITOR.md  INDEX.md  OPEN_QUESTIONS.md  PROJECT_STRUCTURE.md  README.md
godot/: OpenHeart.gdextension  OpenHeart.gdextension.uid  export_presets.cfg  icon.svg.import  main.tscn  main_menu.tscn  project.godot
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: character.rs  classes.rs  config.rs  content.rs  dialogue.rs  dungeon.rs  enemy.rs  game.rs  game_state.rs  gfx.rs  lib.rs  locale.rs  main_menu.rs  map.rs  nav.rs  perk.rs  player.rs  save.rs  settings.rs  status.rs  story.rs  weapon.rs  world.rs
rust/src/combat/: mod.rs  perk.rs  weapon.rs
rust/src/data/: classes.rs  config.rs  item.rs  mod.rs  npc.rs  quest.rs
rust/src/nodes/: game.rs  main_menu.rs  mod.rs  player.rs
rust/src/nodes/game/: class_select.rs  combat.rs  conversation.rs  delve.rs  environment.rs  gameplay.rs  hud.rs  hud_update.rs  items.rs  mod.rs
rust/src/state/: mod.rs  settings.rs
rust/src/support/: gfx.rs  locale.rs  mod.rs
rust/src/worldgen/: dungeon.rs  mod.rs  nav.rs  world.rs
tools/: ASSET_GUIDE.md  aigen.json  aigen.py  aigen_templates.json  analyze_regions.py  analyze_weapons.py  debug_cells.py  extract_atlas.py  find_boundaries.py  fix_fire_sprite.py  normalize_chars.py  process_sprites.py  scan_boundary.py  scan_tex_row.py  slice_atlases.py  slice_fix.py  (+1 more)
(+253 files in other folders)
