[package]
name = "openheart"
version = "0.1.0"
edition = "2021"
description = "OpenHeart — visual-novel / top-down RPG MVP, logic in Rust via godot-rust (gdext)"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot      = { version = "0.5.4", features = ["api-4-3"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
